Fix layout bug

--- a/source/style.sass
+++ b/source/style.sass
@@ -112,7 +112,6 @@
   .value-prop-header
     @extend h3
     @extend .text-highlight
-    height: 100%
     padding-bottom: $s-1--11
 
   .value-prop-subheader
